# adk_workshop

./: .gitignore  README.md  main.py  pyproject.toml
a2a/: README.md  pyproject.toml
a2a/a2a_adk/a2a_agent/agent_client/: agent.py
a2a/a2a_adk/a2a_tool/agent_client/: agent.py
a2a/adk/: README.md
a2a/adk/a2a_agent/agent_client/: agent.py
a2a/adk/a2a_agent/remote_agents/stock_price/agent_stock_price/: agent.py  sub_agent.py
a2a/adk/a2a_tool/agent_client/: agent.py  sub_agent.py
a2a/adk/a2a_tool/remote_agents/exchange_rate/agent_exchange_rate/: agent.py
a2a/adk/multi-agents/agent_client/: agent.py  sub_agent.py
a2a/adk/multi-agents/remote_agents/exchange_rate/agent_exchange_rate/: agent.py
a2a/adk/multi-agents/remote_agents/stock_price/agent_stock_price/: agent.json  agent.py
a2a/adk/simple/: README.md  agent.py  client.py  convert.py  executor.py  server.py
a2a/concept/: README.md
a2a/concept/basic/: README.md  client.py  executor.py  server.py
adk/: README.md  pyproject.toml
adk/01-agent/: README.md
adk/01-agent/basic/: README.md  (+1 more)
adk/02-context/: README.md  adk_session.db
adk/02-conversations/: README.md  agent_session.db
adk/03-tools/: README.md
adk/04-workflow/: README.md
adk/05-callback/: README.md
adk/05-workflow/: README.md
adk/06-deploy/: README.md
adk/07-model/: README.md
adk/07-output/: README.md
adk/08-model/: README.md
adk/08-output/: README.md
adk/09-evaluate/: README.md
adk/10-unittest/: README.md  async.py
adk/99-wip/: stock_REST.py
mcp/: pyproject.toml
mcp/stdio/: stdio_client.py  stdio_server.py
(+204 files in other folders)
